Templates en carpeta

--- a/templates/left-sidebar.html
+++ b/templates/left-sidebar.html
@@ -10,9 +10,9 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="../assets/css/main.css" />
 	</head>
-	<body class="no-sidebar">
+	<body class="left-sidebar">
 		<div id="page-wrapper">
 
 			<!-- Header Wrapper -->
@@ -52,8 +52,8 @@
 													</li>
 													<li><a href="portfolio.html">Portfolio</a></li>
 													<li><a href="right-sidebar.html">Right Sidebar</a></li>
-													<li><a href="left-sidebar.html">Left Sidebar</a></li>
-													<li class="current_page_item"><a href="no-sidebar.html">No Sidebar</a></li>
+													<li class="current_page_item"><a href="left-sidebar.html">Left Sidebar</a></li>
+													<li><a href="no-sidebar.html">No Sidebar</a></li>
 												</ul>
 											</nav>
 
@@ -70,22 +70,51 @@
 						<div class="row">
 							<div class="12u">
 								<div id="bar">
-									<h2>No Sidebar</h2>
+									<h2>Left Sidebar</h2>
 									<p>Lorem ipsum dolor sit amet nullam consequat  feugiat lorem tempus</p>
 								</div>
 							</div>
 						</div>
 						<div class="row">
-							<div class="12u">
+							<div class="4u 12u(mobile)">
+								<div id="sidebar">
+									<section>
+										<h2>Fusce ultrices fringilla</h2>
+										<p>Quisque vel sapien sit amet tellus elementum ultricies. Nunc vel orci turpis. </p>
+										<ul class="style3">
+											<li class="first">
+												<p><a href="#">Ipsum ante vivamus semper faucibus varius. Nam risus nibh, commodo vulputate. Integer sit amet pede vel arcu aliquet pretium. </a></p>
+												<span class="posted">8 hours ago</span>
+											</li>
+											<li>
+												<p><a href="#">Sed amet consequat lorem ipsum dolor sit amet blandit feugiat lorem ipsum sed ante nibh, commodo vulputate. Integer  aliquet pretium.</a></p>
+												<span class="posted">1 day ago</span>
+											</li>
+										</ul>
+									</section>
+									<section>
+										<h2>Aenean elementum</h2>
+										<ul class="style1">
+											<li class="first"><a href="#">Quisque vel sapien sit amet tellus</a></li>
+											<li><a href="#">Elementum ultricies nunc vel orci turpis.</a></li>
+											<li><a href="#">Donec dolore interdum quis convallis</a></li>
+											<li><a href="#">Feugiat veroeros lorem sed phasellus</a></li>
+										</ul>
+									</section>
+								</div>
+							</div>
+
+							<div class="8u 12u(mobile) important(mobile)">
 								<div id="content">
 									<article>
-										<h2>Nulla luctus eleifend purus</h2>
-										<p><a href="#" class="image image-left"><img src="images/portfolio/thumbnails/pic05.jpg" alt=""></a>Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus ac magna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.								Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna, elementum ut, vestibulum eu, facilisis quis, arcu. Mauris a dolor. Nulla facilisi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed blandit. Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc.</p>
-										<p>Vestibulum suscipit volutpat nulla. Maecenas pede nisl, elementum eu, ornare ac, malesuada at, erat. Proin gravida orci porttitor enim accumsan lacinia. Donec condimentum, urna non molestie semper, ligula enim ornare nibh, quis laoreet eros quam eget ante. Aliquam libero. Vivamus nisl nibh, iaculis vitae, viverra sit amet, ullamcorper vitae, turpis. Aliquam erat volutpat. Vestibulum dui sem, pulvinar sed, imperdiet nec, iaculis nec, leo. Fusce odio. Etiam arcu dui, faucibus eget, placerat vel, sodales eget, orci. Donec ornare neque ac sem. Mauris aliquet. Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Donec nonummy magna quis risus. Quisque eleifend. Phasellus tempor vehicula justo. Aliquam lacinia metus ut elit. Suspendisse iaculis mauris nec lorem. Phasellus justo auctor lectus, a lobortis lorem mauris quis nunc. Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. In hac habitasse platea dictumst. Nullam id ante eget dui vulputate aliquam. Pellentesque erat erat, tincidunt in, eleifend accumsan, malesuada eget, augue. Suspendisse sit amet tellus in eros bibendum condimentum. Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc. Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos.</p>
-										<p> In hac habitasse platea dictumst. Nullam id ante eget dui vulputate aliquam. Pellentesque erat erat, tincidunt in, eleifend accumsan, malesuada eget, augue. Suspendisse sit amet tellus in eros bibendum condimentum. Vestibulum suscipit volutpat nulla.								Maecenas pede nisl, elementum eu, ornare ac, malesuada at, erat. Proin gravida orci porttitor enim accumsan lacinia. Donec condimentum, urna non molestie semper, ligula enim ornare nibh, quis laoreet eros quam eget ante. Aliquam libero. Vivamus nisl nibh, iaculis vitae, viverra sit amet, ullamcorper vitae, turpis. Aliquam erat volutpat. Vestibulum dui sem, pulvinar sed, imperdiet nec, iaculis nec, leo. Fusce odio. Etiam arcu dui, faucibus eget, placerat vel, sodales eget, orci. Donec ornare neque ac sem. Mauris aliquet. Aliquam sem leo ultricies quis, justo. Donec nonummy magna quis risus. Quisque eleifend. Phasellus tempor vehicula justo. Aliquam lacinia metus ut elit. Suspendisse iaculis mauris nec lorem. Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc. Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. In hac habitasse platea dictumst. Nullam id ante eget dui vulputate aliquam. Pellentesque erat erat, tincidunt in, eleifend accumsan, malesuada eget, augue. Suspendisse sit amet tellus in eros bibendum condimentum. </p>
+										<h2>Maecenas luctus lectus</h2>
+										<p><a href="#" class="image image-left"><img src="images/portfolio/thumbnails/pic05.jpg" alt=""></a>Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretiums. Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus ac magna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque pede.</p>
+										<p>Nulla facilisi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed blandit. Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc. Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. In hac habitasse platea dictumst. Nullam id ante eget dui vulputate aliquam. Donec nonummy magna quis risus. Quisque eleifend. Phasellus tempor vehicula justo. Aliquam lacinia metus ut elit. Suspendisse iaculis mauris nec lorem. Pellentesque erat erat,  in, eleifend accumsan. Suspendisse sit amet tellus in eros bibendum condimentum. Vestibulum suscipit volutpat nulla. Maecenas pede nisl, elementum eu, ornare ac, malesuada at, erat. Proin gravida orci porttitor enim  lacinia. Donec condimentum, urna non molestie semper, ligula enim  nibh, quis laoreet eros quam eget ante.</p>
+										<p>Donec nonummy magna quis risus. Quisque eleifend. Phasellus tempor vehicula justo. Aliquam lacinia metus ut elit. Suspendisse iaculis mauris nec lorem. Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc. Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. In hac habitasse platea dictumst. Nullam id ante eget dui vulputate aliquam. Pellentesque erat erat, tincidunt in, eleifend accumsan, malesuada eget, augue. Suspendisse sit amet tellus in eros bibendum condimentum. Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc. Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. Donec nonummy magna quis risus. Quisque eleifend. Phasellus tempor vehicula justo. </p>
 									</article>
 								</div>
 							</div>
+
 						</div>
 					</div>
 				</div>
